test/langtools/tools/javac/valhalla/lworld-values/CheckValueModifier.out
CheckValueModifier.java:18:10: compiler.err.illegal.combination.of.modifiers: interface, value
CheckValueModifier.java:19:11: compiler.err.illegal.combination.of.modifiers: interface, value
CheckValueModifier.java:20:10: compiler.err.mod.not.allowed.here: value
CheckValueModifier.java:21:19: compiler.err.illegal.combination.of.modifiers: abstract, value
CheckValueModifier.java:15:14: compiler.err.mod.not.allowed.here: value
CheckValueModifier.java:16:14: compiler.err.mod.not.allowed.here: value
6 errors
